Sending image via endpoint